# ai-code-performance

./: CLAUDE.md  HANDOFF.md  SETUP.md  dev-plan.md
.claude/skills/frontend-engineer/: SKILL.md
.claude/skills/orchestrator/: SKILL.md
.claude/skills/rust-backend-engineer/: SKILL.md
.claude/skills/solution-planner/: SKILL.md
agents/ai-usage-agent/: SETUP.md  package-lock.json  package.json
agents/ai-usage-agent/src/: enrich.ts  index.ts  ipc-server.ts  types.ts  uploader.ts
backend/ai-usage-backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/ai-usage-backend/liquibase/: liquibase.properties
backend/ai-usage-backend/liquibase/changelogs/: 001-create-developers-table.yaml  002-create-governance-config-table.yaml  003-create-usage-events-table.yaml  004-create-governance-audit-log-table.yaml  005-add-developer-role.yaml
backend/ai-usage-backend/src/: lib.rs  main.rs
backend/ai-usage-backend/src/adapters/db/: repository.rs
backend/ai-usage-backend/src/adapters/http/: error.rs  events.rs  governance.rs  mod.rs  summary.rs
backend/ai-usage-backend/src/domain/: auth.rs  mod.rs  model.rs  ports.rs
backend/ai-usage-backend/src/infrastructure/: mod.rs
backend/ai-usage-backend/tests/: integration_test.rs
dashboard/: .env.example  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
dashboard/src/layouts/: RootLayout.tsx
dashboard/src/routes/: AuditLog.tsx  DashboardHome.tsx  GovernanceSettings.tsx  NotFound.tsx  Settings.tsx  (+1 more)
docs/contracts/: domain-local-agent.yaml
docs/domain-contract/: build-order.yaml  domain-ai-usage-backend.yaml  domain-ai-usage-dashboard.yaml
docs/overview/: architecture.md
(+64 files in other folders)
